--- a/Todolist.html
+++ b/Todolist.html
@@ -204,7 +204,7 @@
       </div>
     </div>
     <footer>
-      Made by Group members | Thank you ☀️
+      Made by Group members  and all copy rights reserved 2025 | Thank you ☀️
     </footer>
   </div>
   <script>
