body color and header position chanmged

--- a/product.html
+++ b/product.html
@@ -8,20 +8,20 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #0d0d0d;
-      color: white;
+      background-color: red;
+      color: black;
     }
     header {
       display: flex;
       justify-content: space-between;
-      align-items: center;
+      align-items: left;
       padding: 20px 50px;
       background: #0d0d0d;
     }
     header nav a {
       margin: 0 15px;
       text-decoration: none;
-      color: white;
+      color: violet;
       font-weight: bold;
     }
     .btn-yellow {
