product list file

--- a/product.html
+++ b/product.html
@@ -2,26 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Fitness Website</title>
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-color: red;
-      color: black;
+      background-color: #0d0d0d;
+      color: white;
     }
     header {
       display: flex;
       justify-content: space-between;
-      align-items: left;
+      align-items: center;
       padding: 20px 50px;
       background: #0d0d0d;
     }
     header nav a {
       margin: 0 15px;
       text-decoration: none;
-      color: violet;
+      color: white;
       font-weight: bold;
     }
     .btn-yellow {
@@ -167,6 +166,7 @@
   <section class="section" id="community">
     <h2>Join Our Community</h2>
     <p>Connect with others and stay motivated together!</p>
+  </section>
 
 </body>
 </html>
